--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>savelink</title>
+  <title>saveput</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
  
 <div class="wrapper">
-	<div class="header">savelink</div>
+	<div class="header">SAVEPUT <br>
+		klik pada logo yang ingin anda kunjungi
+
+	</div>
 	<!-- baris baris pertama  -->
 	<div class="cards_wrap">
 		<div class="card_item">
@@ -47,6 +50,40 @@
 	</div>
 	<!-- end baris pertama -->
 	
+	<div class="cards_wrap">
+		<div class="card_item">
+			<div class="card_inner">
+				<a href="https://youtube4kdownloader.com/id98/cut-youtube-video.html" target="_blank">
+				<img src="gambar/pemotong.jpeg"></a>
+				<div class="role_name">Pemotong Youtube Video Online</div>
+				<div class="film">Digunakan untuk memotong klip video youtube</div>
+			</div>
+		</div>
+		<div class="card_item">
+			<div class="card_inner">
+				<a href="https://app.pictory.ai/login" target="_blank">
+				<img src="gambar/gambar4.png"></a>
+				<div class="role_name">pictory ai</div>
+				<div class="film">Pistory memanfaatkan teknologi AI terbaru untuk secara otomatis membuat video dari skrip Anda</div>
+			</div>
+		</div>
+		<div class="card_item">
+			<div class="card_inner">
+				<a href="https://studio.polotno.com/" target="_blank"> 
+				<img src="gambar/poloto.png"></a>
+				<div class="role_name">polotno studio</div>
+				<div class="film">Sebuah situs web desain grafis yang memiliki fitur seperti situs web canva</div>
+			</div>
+		</div>
+		<div class="card_item">
+			<div class="card_inner">
+				<a href="https://www.remove.bg/" target="_blank">
+				<img src="gambar/removebg.png"></a>
+				<div class="role_name">Remove Background</div>
+				<div class="film">Hapus latar belakang gambar secara otomatis dalam 5 detik hanya dengan satu klik</div>
+			</div>
+		</div>
+	</div>
 </div>  
 
 </body>
