--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	</div>
 	<!-- end baris pertama -->
 	
+	<!-- start baris kedua -->
 	<div class="cards_wrap">
 		<div class="card_item">
 			<div class="card_inner">
@@ -69,18 +70,18 @@
 		</div>
 		<div class="card_item">
 			<div class="card_inner">
-				<a href="https://studio.polotno.com/" target="_blank"> 
-				<img src="gambar/poloto.png"></a>
-				<div class="role_name">polotno studio</div>
-				<div class="film">Sebuah situs web desain grafis yang memiliki fitur seperti situs web canva</div>
+				<a href="https://www.virustotal.com/gui/home/upload" target="_blank"> 
+				<img src="gambar/virus.png"></a>
+				<div class="role_name">virus total</div>
+				<div class="film">Salah satu produk layanan online gratis yang berguna untuk menganalisis berkas dari virus, worm, trojan, dan segala jenis perangkat perusak dengan menggunakan 54 mesin antivirus</div>
 			</div>
 		</div>
 		<div class="card_item">
 			<div class="card_inner">
-				<a href="https://www.remove.bg/" target="_blank">
-				<img src="gambar/removebg.png"></a>
-				<div class="role_name">Remove Background</div>
-				<div class="film">Hapus latar belakang gambar secara otomatis dalam 5 detik hanya dengan satu klik</div>
+				<a href="https://www.ilovepdf.com/word_to_pdf" target="_blank">
+				<img src="gambar/ilovepdf.png"></a>
+				<div class="role_name">I Love PDF</div>
+				<div class="film">Konverter semua jenis file ke dalam PDF</div>
 			</div>
 		</div>
 	</div>
